Tried to get proper row numbering for visual parse tree.

--- a/LL1 Parser/Lab3/Lab3.vcxproj
+++ b/LL1 Parser/Lab3/Lab3.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClInclude Include="cParser.h" />
     <ClInclude Include="cTable.h" />
+    <ClInclude Include="RDP.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cParser.cpp" />
